[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Slot" type="ColorRect"]
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotImage" type="Sprite" parent="."]
position = Vector2( 25, 25 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
normal_map = SubResource( 1 )

[node name="Count" type="Label" parent="SlotImage"]
anchor_right = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -55.0
margin_bottom = -18.0
rect_scale = Vector2( 1.5, 1.5 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="SlotImage"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlotImage/Area2D"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Key" type="Label" parent="."]
anchor_right = 1.0
margin_top = -15.0
margin_bottom = -1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
[connection signal="mouse_entered" from="SlotImage/Area2D" to="SlotImage" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="SlotImage/Area2D" to="SlotImage" method="_on_Area2D_mouse_exited"]
